@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-02T16:13:26Z",
+  "timestamp" : "2022-06-04T08:10:26Z",
   "count_outdated" : 389,
   "uniques_outdated" : 18,
-  "count" : 404,
-  "uniques" : 23,
+  "count" : 406,
+  "uniques" : 24,
   "views" : [
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 6,
       "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
