@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
