@@ -1,3 +1,10 @@
+2022-06-04T08:10:26Z:
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 18 389 / 23 404
+* notice: next accum: outdated-unq outdated-all / unq all: 18 389 / 24 406
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-04]
+
 2022-06-02T16:13:26Z:
 * notice: last 14d: unq all: 1 15
 * notice: prev accum: outdated-unq outdated-all / unq all: 17 385 / 23 404
